<resources>
    <string name="app_name">final_wmp</string>
    <string name="choose_your_nfavorite_coffee">Choose your\nFavorite Coffee</string>
    <string name="get_started">Get Started</string>
    <string name="search_anything">Search anything...</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="cart">Cart</string>
    <string name="explorer">Explorer</string>
    <string name="profile">Profile</string>
    <string name="enter_your_discount_code">Enter Your Discount Code</string>
    <string name="apply">Apply</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="need_an_account_register_here">Need an account? Register Here</string>
</resources>